# cb64

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: ci.yml
b64/: cb64.h
scripts/: install_ubuntu_deps
testdata/: out.txt
